--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^3.4.14",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.14.3",
+        "sass": "^1.80.4"
     }
 }
