--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost:8000
-DEFAULT_APP_THEME=ligth
+DEFAULT_APP_THEME=light
 APP_LOGO=https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg
 
 APP_LOCALE=en
