--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_TIMEZONE=UTC
 APP_URL=http://localhost:8000
 DEFAULT_APP_THEME=light
 APP_LOGO=https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg
+DEBUGBAR_ENABLED=false
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
