--- a/config/_docker/Dockerfile
+++ b/config/_docker/Dockerfile
@@ -4,7 +4,6 @@ RUN apt-get update && apt-get install -y \
     zip \
     unzip \
     curl \
-    libpq-dev \
     libzip-dev \
     libpng-dev \
     libonig-dev \
@@ -17,8 +16,7 @@ RUN apt-get update && apt-get install -y \
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 RUN docker-php-ext-install -j$(nproc) \
-    pdo_pgsql \
-    pgsql \
+    pdo_mysql \
     mbstring \
     exif \
     pcntl \
