--- a/.env.example
+++ b/.env.example
@@ -24,9 +24,9 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=database
-DB_PORT=5432
+DB_CONNECTION=mysql
+DB_HOST=database  
+DB_PORT=3306
 DB_DATABASE=gravitylabs
 DB_USERNAME=user
 DB_PASSWORD=password
